--- a/saxpy-c-asm/saxpy-c-asm.vcxproj.filters
+++ b/saxpy-c-asm/saxpy-c-asm.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="test_init.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="saxpy.asm">
@@ -40,6 +43,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="test_init.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
